<resources>
    <string name="app_name">Groupr</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email_address">Email address</string>
    <string name="prompt_email_address_confirm">Email address (again):</string>
    <string name="prompt_password_sign_up">Password:</string>
    <string name="register">Sign me up!</string>
    <string name="action_sign_in">Sign in/Register</string>
    <string name="grid_button">Discovery!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_discovery">Discovery</string>
    <string name="title_activity_finish_sign_up">Finish Sign Up</string>
</resources>
